# aw-watcher-zed

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  extension.toml
activitywatch-ls/: Cargo.toml  README.md
activitywatch-ls/src/: main.rs
src/: lib.rs
