[package]
name = "aw-watcher-zed"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }

[workspace]
members = ["activitywatch-ls"]

[workspace.package]
version = "0.0.3"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = false
