[package]
name = "aw-watcher-zed"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["activitywatch-ls"]

[workspace.package]
version = "0.1.1"

[profile.release]
lto = "thin"
strip = true    # Automatically strip symbols from the binary.
opt-level = "s" # Optimize for size.

[profile.dist]
inherits = "release"

[package.metadata.dist]
dist = false
