[package]
name = "activitywatch-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/sachk/aw-watcher-zed"


[dependencies]
chrono = "0.4.38"
clap = "4.5.16"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.39.3", features = ["full"] }
tower-lsp = "0.20.0"
url = "2.5.2"
aw-client-rust = { git = "https://github.com/sachk/aw-server-rust", branch = "master" }
