[package]
name = "activitywatch-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/sachk/aw-watcher-zed"


[dependencies]
chrono = "0.4"
clap = "4.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tower-lsp = "0.20"
url = "2.5"
aw-client-rust = { git = "https://github.com/sachk/aw-server-rust", branch = "master" }
arc-swap = "1.7"
